:sparkles: Allow to set custom cookie parsers
Provides a way to be compliant with RFC 6265 section 4.1.1.